--- a/src/index.html
+++ b/src/index.html
@@ -10,31 +10,31 @@
       <form id="postal-info-form" novalidate>
         <div class="input-field">
           <label for="email">Email</label>
-          <input type="email" id="email" required>
+          <input type="email" class="input-box" id="email" required>
           <span class="error" id="email-error" aria-live="polite"></span>
         </div>
 
         <div class="input-field">
           <label for="country">Country</label>
-          <input type="text" id="country" required minlength="4" maxlength="56">
+          <input type="text" class="input-box" id="country" required minlength="4" maxlength="56">
           <span class="error" id="country-error" aria-live="polite"></span>
         </div>
 
         <div class="input-field">
           <label for="zip-code">Zip Code</label>
-          <input type="text" id="zip-code" required minlength="4" maxlength="9">
+          <input type="text" class="input-box" id="zip-code" required minlength="4" maxlength="9">
           <span class="error" id="zip-code-error" aria-live="polite"></span>
         </div>
 
         <div class="input-field">
           <label for="password">Password</label>
-          <input type="password" id="password" required>
+          <input type="password" class="input-box" id="password" required>
           <span class="error" id="password-error" aria-live="polite"></span>
         </div>
 
         <div class="input-field">
           <label for="password-confirmation">Confirm Password</label>
-          <input type="password" id="password-confirmation" required>
+          <input type="password" class="input-box" id="password-confirmation" required>
           <span class="error" id="password-confirmation-error" aria-live="polite"></span>
         </div>
 
